# cabaltest

./: LICENSE  Main.hs  README.md  Specs.hs  cabaltest.cabal
